src/test/ui/use/use-super-global-path.stderr
error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:7:11
   |
LL |     use ::super::{S, Z};
   |           ^^^^^ global paths cannot start with `super`

error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:7:11
   |
LL |     use ::super::{S, Z};
   |           ^^^^^ global paths cannot start with `super`

error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:11:15
   |
LL |         use ::super::main;
   |               ^^^^^ global paths cannot start with `super`

error[E0425]: cannot find function `main` in this scope
  --> $DIR/use-super-global-path.rs:12:9
   |
LL |         main();
   |         ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL |     use main;
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
